# security-constraints

./: .flake8  .gitignore  README.md  pyproject.toml  requirements-lint.txt  requirements-test.txt  tox.ini
.github/: ci.yaml
.github/workflows/: ci.yaml  publish.yaml
src/security_constraints/: common.py  github_security_advisory.py  main.py
test/: conftest.py  test_common.py  test_github_security_advisory.py  test_integration.py  test_main.py
test/system_test/: sc-conf.yaml  system_test.sh
